content/pt-br/devops/kubernetes/cka/9-Networking/be-products-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: be-products-service
  name: be-products-service
  namespace: backend
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: be-products-deploy
  type: ClusterIP
status:
  loadBalancer: {}
