content/pt-br/devops/kubernetes/cka/9-Networking/database-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
spec:
  containers:
    - name: mariadb
      image: mariadb:10.2
      ports:
        - containerPort: 3306
      # command:
      #   - "mysqld"
      #   - "--character-set-server=utf8mb4"
      #   - "--collation-server=utf8mb4_general_ci"
      #   - "--character_set_server=utf8mb4"
      #   - "--collation_server=utf8mb4_general_ci"
      #   - "--lower_case_table_names=1"
      #   - "--innodb-flush-method=fsync"
      env:
        - name: "MYSQL_ROOT_PASSWORD"
          value: "root"
        - name: "TZ"
          value: "America/Sao_Paulo"
