content/pt-br/devops/kubernetes/cka/9-Networking/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: httpd
  name: httpd
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    name: httpd
