content/pt-br/devops/kubernetes/cka/9-Networking/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    name: nginx
